ignore heavy station

--- a/.gitignore
+++ b/.gitignore
@@ -37,9 +37,10 @@ sysinfo.txt
 # Assets
 Assets/Mech_Constructor_Humanoids
 Assets/StylizedProjectilePack1
+Assets/Heavy Station Kit base/
 
 # Textures
 Assets/Textures/
 
 # Shaders
-Assets/Shaders/
+Assets/Shaders
