Change lifestock update

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ sysinfo.txt
 # Assets
 Assets/Mech_Constructor_Humanoids
 Assets/StylizedProjectilePack1
+Assets/Heavy Station Kit base/
 
 # Textures
 Assets/Textures/
