[WIP] Add Reload Sound and gun impact sound

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ sysinfo.txt
 Assets/Mech_Constructor_Humanoids
 Assets/StylizedProjectilePack1
 Assets/Heavy Station Kit base/
+Assets/Fantasy Music Collection Lite/
 
 # Textures
 Assets/Textures/
